; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_l_struct.c_ReadString.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_l_struct.c_ReadString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@TT_STRING = common dso_local global i32 0, align 4
@MAX_STRINGFIELD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReadString(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @TT_STRING, align 4
  %11 = call i32 @PC_ExpectTokenType(i32* %9, i32 %10, i32 0, %struct.TYPE_3__* %8)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %28

14:                                               ; preds = %3
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @StripDoubleQuotes(i32 %16)
  %18 = load i8*, i8** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @MAX_STRINGFIELD, align 4
  %22 = call i32 @strncpy(i8* %18, i32 %20, i32 %21)
  %23 = load i8*, i8** %7, align 8
  %24 = load i32, i32* @MAX_STRINGFIELD, align 4
  %25 = sub nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %23, i64 %26
  store i8 0, i8* %27, align 1
  store i32 1, i32* %4, align 4
  br label %28

28:                                               ; preds = %14, %13
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @PC_ExpectTokenType(i32*, i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @StripDoubleQuotes(i32) #1

declare dso_local i32 @strncpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
